try to fix node dependency vulnerabilities

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "preinstall":"npx npm-force-resolutions",
     "start": "node app.js",
     "dev": "DEVMODE=true node app.js"
   },
