--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "resolutions": {
     "ejs": "^3.1.6",
     "underscore": "^1.12.1",
-    "ajv": "^6.12.3",
+    "ajv":"6.12.3",
     "minimist": "^0.2.1"
   },
   "repository": {},
