--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "start": "node app.js",
-    "dev": "DEVMODE=true node app.js"
+    "dev": "DEVMODE=true node app.js",
+    "acceptance-test": "jest ./acceptance-test",
+    "test": "jest ./test"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
