--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.4",
     "express-http-proxy": "^1.6.0",
     "ibmcloud-appid": "^6.1.0",
+    "jest": "^27.0.1",
     "log4js": "^6.1.0",
     "node-random-name": "^1.0.1",
     "request": "^2.88.2"
